src/objects/OrgChartPlus__MSO_OrgChart2Relationship__c.object
<CustomObject>
    <description>Chart specific contact relationships</description>
    <fields>
        <fullName>OrgChartPlus__ChildEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child Entity</label>
        <referenceTo>OrgChartPlus__MSO_OrgChart2Entity__c</referenceTo>
        <relationshipLabel>MSO OrgChart Relationships (Child Entity)</relationshipLabel>
        <relationshipName>OrgChart_Child_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__ChildTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Child TeamMember</label>
        <referenceTo>OrgChartPlus__MSO_OrgChart2TeamMember__c</referenceTo>
        <relationshipLabel>MSO OrgChart Relationships</relationshipLabel>
        <relationshipName>MSO_OrgChart_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__OrgChart__c</fullName>
        <label>OrgChart</label>
        <referenceTo>OrgChartPlus__MSO_OrgChart2__c</referenceTo>
        <relationshipLabel>MSO OrgChart Relationships</relationshipLabel>
        <relationshipName>MSO_OrgChartRelationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__ParentEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Entity</label>
        <referenceTo>OrgChartPlus__MSO_OrgChart2Entity__c</referenceTo>
        <relationshipLabel>MSO OrgChart Relationships</relationshipLabel>
        <relationshipName>OrgChart_Parent_Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__ParentTeamMember__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent TeamMember</label>
        <referenceTo>OrgChartPlus__MSO_OrgChart2TeamMember__c</referenceTo>
        <relationshipLabel>MSO OrgChart Relationships (Parent TeamMember)</relationshipLabel>
        <relationshipName>MSO_OrgChart_Relationships1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrgChartPlus__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manager</fullName>
                    <default>true</default>
                    <label>Manager</label>
                </value>
                <value>
                    <fullName>Knows</fullName>
                </value>
                <value>
                    <fullName>Influences</fullName>
                </value>
                <value>
                    <fullName>Collaborates</fullName>
                </value>
                <value>
                    <fullName>Socialises</fullName>
                </value>
                <value>
                    <fullName>Supplies</fullName>
                </value>
                <value>
                    <fullName>Supporter of</fullName>
                </value>
                <value>
                    <fullName>In Conflict with</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MSO OrgChart Relationship</label>
    <nameField>
        <displayFormat>MOR-{000000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MSO OrgChart Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>